--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 * {
-    box-sizing: border-box;
-  }
+  box-sizing: border-box;
+}
   
 header, #top-menu {
   position: relative;
@@ -8,6 +8,12 @@ header, #top-menu {
 
 #top-menu {
   z-index: 20;
+}
+
+#sub-menu {
+  width: 100%;
+  z-index: 10;
+  transition: top 0.5s ease-out;
 }
 
 #sub-menu a:hover {
